--- a/index.html
+++ b/index.html
@@ -33,79 +33,87 @@
 </head>
 
 <body>
-    <div id="particles-js"></div>
-    <div class="jumbotron text-lowercase text-center d-flex justify-content-center align-items-center" style="height: 100vh;width: 100vw;margin: auto;">
-        <div><img src="/assets/img/logo-cropped.svg">
-            <p class="lead" style="font-size: 30px;">welcome to my website</p><a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://blog.unixfy.net" style="margin: 5px;">blog</a><a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://docs.unixfy.net"
-                style="margin: 5px;">docs</a><a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://support.unixfy.net" style="margin: 5px;">support</a><a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://my.unixfy.net"
-                style="margin: 5px;">myunixfy</a><a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://network.unixfy.net" style="margin: 5px;">as139921</a><a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://unixfyhosting.com"
-                style="margin: 5px;">hosting</a></div>
-    </div><script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
-<script>
-particlesJS("particles-js", {
-  particles: {
-    number: { value: 120, density: { enable: true, value_area: 800 } },
-    color: { value: "#2196f3" },
-    shape: {
-      type: "circle",
-      stroke: { width: 0, color: "#000000" },
-      polygon: { nb_sides: 5 },
-      image: { src: "", width: 100, height: 100 },
-    },
-    opacity: {
-      value: 0.5,
-      random: false,
-      anim: { enable: false, speed: 1, opacity_min: 0.1, sync: false },
-    },
-    size: {
-      value: 4.008530152163807,
-      random: true,
-      anim: { enable: false, speed: 40, size_min: 0.1, sync: false },
-    },
-    line_linked: {
-      enable: true,
-      distance: 150,
-      color: "#2196f3",
-      opacity: 0.4,
-      width: 1,
-    },
-    move: {
-      enable: true,
-      speed: 6,
-      direction: "none",
-      random: true,
-      straight: false,
-      out_mode: "bounce",
-      bounce: false,
-      attract: { enable: true, rotateX: 600, rotateY: 1200 },
-    },
-  },
-  interactivity: {
-    detect_on: "canvas",
-    events: {
-      onhover: { enable: true, mode: "repulse" },
-      onclick: { enable: true, mode: "bubble" },
-      resize: true,
-    },
-    modes: {
-      grab: { distance: 400, line_linked: { opacity: 1 } },
-      bubble: { distance: 400, size: 20, duration: 2, opacity: 8, speed: 3 },
-      repulse: { distance: 200, duration: 0.4 },
-      push: { particles_nb: 4 },
-      remove: { particles_nb: 2 },
-    },
-  },
-  retina_detect: true,
-});
-</script><script type="module">
-    import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+    <div class="jumbotron text-lowercase" style="height: 100vh;width: 100vw;margin: 0px;padding:0px !important;">
+        <div id="particles-js" class="text-center d-flex justify-content-center align-items-center">
+            <div id="inside">
+                <img src="/assets/img/logo-cropped.svg">
+                <p class="lead" style="font-size: 30px;">welcome to my website</p>
+                <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://blog.unixfy.net" style="margin: 5px;">blog</a>
+                <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://docs.unixfy.net" style="margin: 5px;">docs</a>
+                <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://support.unixfy.net" style="margin: 5px;">support</a>
+                <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://my.unixfy.net" style="margin: 5px;">myunixfy</a>
+                <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://network.unixfy.net" style="margin: 5px;">as139921</a>
+                <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://unixfyhosting.com" style="margin: 5px;">hosting</a>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
+    <script>
+        particlesJS("particles-js", {
+            particles: {
+                number: { value: 120, density: { enable: true, value_area: 800 } },
+                color: { value: "#2196f3" },
+                shape: {
+                    type: "circle",
+                    stroke: { width: 0, color: "#000000" },
+                    polygon: { nb_sides: 5 },
+                    image: { src: "", width: 100, height: 100 },
+                },
+                opacity: {
+                    value: 0.5,
+                    random: false,
+                    anim: { enable: false, speed: 1, opacity_min: 0.1, sync: false },
+                },
+                size: {
+                    value: 4.008530152163807,
+                    random: true,
+                    anim: { enable: false, speed: 40, size_min: 0.1, sync: false },
+                },
+                line_linked: {
+                    enable: true,
+                    distance: 150,
+                    color: "#2196f3",
+                    opacity: 0.4,
+                    width: 1,
+                },
+                move: {
+                    enable: true,
+                    speed: 6,
+                    direction: "none",
+                    random: true,
+                    straight: false,
+                    out_mode: "bounce",
+                    bounce: false,
+                    attract: { enable: true, rotateX: 600, rotateY: 1200 },
+                },
+            },
+            interactivity: {
+                detect_on: "canvas",
+                events: {
+                    onhover: { enable: true, mode: "repulse" },
+                    onclick: { enable: true, mode: "bubble" },
+                    resize: true,
+                },
+                modes: {
+                    grab: { distance: 400, line_linked: { opacity: 1 } },
+                    bubble: { distance: 400, size: 20, duration: 2, opacity: 8, speed: 3 },
+                    repulse: { distance: 200, duration: 0.4 },
+                    push: { particles_nb: 4 },
+                    remove: { particles_nb: 2 },
+                },
+            },
+            retina_detect: true,
+        });
+    </script>
+    <script type="module">
+        import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
 
-const el = document.createElement('pwa-update');
-document.body.appendChild(el);
+        const el = document.createElement('pwa-update');
+        document.body.appendChild(el);
 
-</script>
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
