Fix logo image (needs to be checked onload if dark mode is already enable)

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         // Update the switch if darkmode is on
         if (darkmode.isActivated()) {
             document.getElementById("darkModeSwitch").checked = true;
+            $('#logoimage').attr("src", "/assets/img/logo-cropped-light.svg");
             
         }
         else {
