Revert "More fixes for the logo swapping"
This reverts commit 92831e987da422d89c1056fd8185e77ff9e1f23e.

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         // Swap logo image AND enable dark mode when the switch is toggled
         $("#darkModeSwitch").click(function () {
-            if ($("#logoimage").attr("src") == "/assets/img/logo-cropped.svg" && darkmode.isActivated()) {
+            if ($("#logoimage").attr("src") == "/assets/img/logo-cropped.svg") {
                 $('#logoimage').attr("src", "/assets/img/logo-cropped-light.svg");
             } else {
                 $('#logoimage').attr("src", "/assets/img/logo-cropped.svg");
