Fix logo color toggle to accomodate for Netlify's asset URL rewrite

--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
 
         // Swap logo image AND enable dark mode when the switch is toggled
         $("#darkModeSwitch").click(function () {
-            if ($("#logoimage").attr("src") == "/assets/img/logo-cropped.svg") {
+            darkmode.toggle();
+            if (darkmode.isActivated()) {
                 $('#logoimage').attr("src", "/assets/img/logo-cropped-light.svg");
             } else {
                 $('#logoimage').attr("src", "/assets/img/logo-cropped.svg");
-            };
-            darkmode.toggle();
+            }
         });
     </script>
 </body>
