Update links on homepage

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <p class="lead darkmode-text" style="font-size: 30px;">welcome to my website</p>
                 <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://blog.unixfy.net" style="margin: 5px;">blog</a>
                 <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://docs.unixfy.net" style="margin: 5px;">docs</a>
-                <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://support.unixfy.net" style="margin: 5px;">support</a>
+                <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://sso.unixfy.net" style="margin: 5px;">login</a>
+                <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://jira.unixfy.net/plugins/servlet/desk" style="margin: 5px;">support</a>
                 <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://my.unixfy.net" style="margin: 5px;">myunixfy</a>
                 <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://network.unixfy.net" style="margin: 5px;">as139921</a>
-                <a class="btn btn-primary btn-lg" role="button" target="_blank" href="https://unixfyhosting.com" style="margin: 5px;">hosting</a>
                 <div class="custom-control custom-switch" style="padding-top: 30px;">
                     <input type="checkbox" class="custom-control-input" id="darkModeSwitch">
                     <label class="custom-control-label darkmode-text" for="darkModeSwitch">dark mode?</label>
