Add old logo assets and add themt o meta tags

--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
 
-        <title>Svelte app</title>
+    <title>Unixfy.net</title>
 
-        <meta name="theme-color" content="#E938C2" />
-        <link rel="apple-touch-icon" href="images/touch-icons/logo-192.png" />
+    <meta name="theme-color" content="#2196F3"/>
+    <link rel="apple-touch-icon" href="/images/largeicon.png"/>
+    <meta name="twitter:image" content="/assets/img/largeicon.png">
+    <meta name="twitter:description" content="Unixfy.net is the official website for Unixfy.">
+    <meta name="twitter:card" content="summary">
+    <meta name="description" content="Unixfy.net is the official website for Unixfy.">
+    <meta property="og:type" content="website">
+    <meta name="twitter:title" content="Unixfy.net">
+    <meta property="og:image" content="/assets/img/largeicon.png">
+    <link rel="icon" type="image/png" sizes="1000x1000" href="/images/largeicon.png">
+</head>
 
-        <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+<body>
+<noscript>Please enable Javascript for the best experience.</noscript>
 
-        
-    </head>
-
-    <body>
-        <noscript>Please enable Javascript for best experience.</noscript>
-        
 <script type="module" src="/src/main.js"></script>
-    </body>
+</body>
 </html>
