Improve noscript tags

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 </head>
 
 <body>
-<noscript>Please enable Javascript for the best experience.</noscript>
+<noscript>
+    <div style="background-color: red; padding: 15px;">
+        <p style="color:white; font-size: 2rem;">Please enable JavaScript for the best experience.</p>
+    </div>
+</noscript>
 
 <script type="module" src="/src/main.js"></script>
 </body>
